@@ -82,7 +82,6 @@ int check_loaded_fits_params(fits *ref, ...);
 void merge_fits_headers_to_result2(fits *result, fits **f, gboolean do_sum);
 void merge_fits_headers_to_result(fits *result, gboolean do_sum, fits *f1,...);
 int get_xpsampled(double* xps, const gchar *filename, int i);
-gboolean keyword_is_protected(char *card);
 void process_keyword_string_value(const char *input, char *output, gboolean condition);
 int updateFITSKeyword(fits *fit, const gchar *key, const gchar *newkey, const gchar *value, const gchar *comment, gboolean verbose, gboolean isfitseq);
 int associate_header_to_memfile(const char *header, fitsfile *fptr);
